@@ -17,7 +17,9 @@ is.odd(x)
 integers.
 }
 \seealso{
-Other tcpl abbreviations: \code{\link{lu}},
-  \code{\link{lw}}, \code{\link{sink.reset}}
+Other tcpl abbreviations: 
+\code{\link{lu}()},
+\code{\link{lw}()},
+\code{\link{sink.reset}()}
 }
 \concept{tcpl abbreviations}
