@@ -28,10 +28,14 @@ The length of the \code{TRUE} values in \code{x}
 
 \code{\link{length}}, \code{\link{which}}
 
-Other tcpl abbreviations: \code{\link{is.odd}},
-  \code{\link{lu}}, \code{\link{sink.reset}}
+Other tcpl abbreviations: 
+\code{\link{is.odd}()},
+\code{\link{lu}()},
+\code{\link{sink.reset}()}
 
-Other tcpl abbreviations: \code{\link{is.odd}},
-  \code{\link{lu}}, \code{\link{sink.reset}}
+Other tcpl abbreviations: 
+\code{\link{is.odd}()},
+\code{\link{lu}()},
+\code{\link{sink.reset}()}
 }
 \concept{tcpl abbreviations}
