@@ -36,8 +36,11 @@ Level 1 processing includes defining the concentration and replicate index,
 cndx and repi, respectively.
 }
 \seealso{
-Other multiple-concentration: \code{\link{mc2}},
-  \code{\link{mc3}}, \code{\link{mc4}}, \code{\link{mc5}},
-  \code{\link{mc6}}
+Other multiple-concentration: 
+\code{\link{mc2}()},
+\code{\link{mc3}()},
+\code{\link{mc4}()},
+\code{\link{mc5}()},
+\code{\link{mc6}()}
 }
 \concept{multiple-concentration}
