@@ -30,8 +30,11 @@ call and identify the winning model for each fit.
 \seealso{
 \code{\link{Method functions}}, \code{\link{MC5_Methods}}
 
-Other multiple-concentration: \code{\link{mc1}},
-  \code{\link{mc2}}, \code{\link{mc3}}, \code{\link{mc4}},
-  \code{\link{mc6}}
+Other multiple-concentration: 
+\code{\link{mc1}()},
+\code{\link{mc2}()},
+\code{\link{mc3}()},
+\code{\link{mc4}()},
+\code{\link{mc6}()}
 }
 \concept{multiple-concentration}
