@@ -40,6 +40,7 @@ normalization based on methods listed in sc1_aeid and sc1_methods tables.
 \seealso{
 \code{\link{Method functions}}, \code{\link{SC1_Methods}}
 
-Other single-concentration: \code{\link{sc2}}
+Other single-concentration: 
+\code{\link{sc2}()}
 }
 \concept{single-concentration}
