@@ -4,8 +4,17 @@
 \alias{tcplPlotFits}
 \title{Plot summary fits based on fit and dose-response data}
 \usage{
-tcplPlotFits(dat, agg, flg = NULL, boot = NULL, ordr.fitc = FALSE,
-  browse = FALSE, cnst = NULL, orig.aeid = NULL, compare = F)
+tcplPlotFits(
+  dat,
+  agg,
+  flg = NULL,
+  boot = NULL,
+  ordr.fitc = FALSE,
+  browse = FALSE,
+  cnst = NULL,
+  orig.aeid = NULL,
+  compare = F
+)
 }
 \arguments{
 \item{dat}{data.table, level 4 or level 5 data, see details.}
