@@ -3,6 +3,9 @@ tcpl v2.0.3
 *Created tcplPlot a generic plotting function with call similar to tcplLoadData
 *added option for concentration units to be different during plotting.
 *fixed tcpllite bug for schema change
+*filtered gnls from tcplCytopt
+*updated to Rmariadb
+*various bugfixes
 
 tcpl v2.0.2
 ==============
